--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ body, html {
     body {
         display: flex;
         flex-direction: column;
-        font-size: 18px;
+        
     }
 
     #top-strip, #navigation-strip {
@@ -137,15 +137,23 @@ body, html {
         overflow: auto;
         flex-grow: 1;
     }
-
-    .accordion-button, #navigation-strip button {
-        padding: 24px;
-        font-size: 18px;
-    }
-
-    .accordion-content {
-        padding: 0 24px;
-    }
 }
 
 
+
+
+
+@media only screen and (max-width: 600px) {
+    body {
+        font-size: 22px;
+    }
+
+    .accordion-button, #navigation-strip button {
+        padding: 30px;
+        font-size: 22px;
+    }
+
+    .accordion-content {
+        padding: 0 30px;
+    }
+}
